--- a/manuals/developer-guide/src/main/asciidoc/nemo/odl-nemo-engine-dev.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/nemo/odl-nemo-engine-dev.adoc
@@ -1,19 +1,57 @@
 == NEtwork MOdeling (NEMO)
 
 === Overview
-TBD: Overview of the NEMO feature, what logical functionality it
-provides and why you might use it as a developer.
+The NEMO engine provides REST APIs to express intent, and manage it. With this
+northbound API, user could query what intents have been handled successfully, and
+what types have been predefined.
 
 === NEMO Architecture
-TBD: NEMO components and how they work together.
-Also include information about how the feature integrates with
-OpenDaylight and architecture.
+In NEMO project, it provides three features facing developer.
+
+odl-nemo-engine: it is a whole model to handle intent.
+
+odl-nemo-openflow-renderer: it is a sourthbound render to translate intent to flow
+table in devices supporting for openflow protocol.
+
+odl-nemo-cli-render: it is also a sourthbound render to translate intent into forwarding
+table in devices supporting for traditional protocol.
 
 === Key APIs and Interfaces
-TBD: Document the key things a user would want to use.
+NEMO projects provide four basic REST methods for user to use.
+
+PUT: store the infomation expressed in NEMO model directly without handled by NEMO engin.
+
+POST: the information expressed in NEMO model will be handled by NEMO engine, and will
+be translated into sourthbound configuration.
+
+GET: obtain the data stored in data store.
+
+DELETE: delete the data in data store.
 
 ==== NEMO Intent API
-TBD: A description of NEMO Intent API.
+NEMO provides several RPCs to handle user's intent. All RPCs use POST method.
+
+* http://{controller-ip}:8181/restconf/operations/nemo-intent:register-user": a REST API
+to register a new user. It is the first and necessary step to express intent.
+
+* http://{controller-ip}:8181/restconf/operations/nemo-intent:transaction-begin" : a REST
+type to start a transaction. The intent exist in the transction will be hanlded together.
+
+* http://{controller-ip}:8181/restconf/operations/nemo-intent:transaction-end" : a REST API
+to end a transction. The intent exist in the transction will be hanlded together.
+
+* http://{controller-ip}:8181/restconf/operations/nemo-intent:structure-style-nemo-update: a
+REST API to create, import or update intent in a structure style, that is, user could express the
+structure of intent in json body.
+
+* http://{controller-ip}:8181/restconf/operations/nemo-intent:structure-style-nemo-delete: a
+REST API to delete intent in a structure style.
+
+* http://{controller-ip}:8181/restconf/operations/nemo-intent:language-style-nemo-request: a REST
+API to create, import, update and delete intent in a language style, that is, user could express
+intent with NEMO script. On the other hand, with this interface, user could query which intent have
+been handled successfully.
 
 === API Reference Documentation
-TBD: Provide links to JavaDoc, REST API documentation, etc.
+Go to http://${IPADDRESS}:8181/apidoc/explorer/index.html. User could see many useful APIs to
+deploy or query intent.
