Adding dev and user guide adoc for FaaS project
Change-Id: I2fcaa9133f949f9e767c37ab853f196cb0ad810b
Signed-off-by: chuxingjun <xingjun.chu@huawei.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -66,6 +66,8 @@ include::didm/didm-dev.adoc[]
 
 include::dlux/dlux-core-dev.adoc[]
 
+include::faas/odl-faas-dev.adoc[]
+
 include::iotdm/iotdm-dev.adoc[]
 
 include::l2switch/l2switch-dev.adoc[]
