--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -40,6 +40,8 @@ include::capwap/capwap-user.adoc[CAPWAP]
 
 include::didm/didm-user.adoc[]
 
+include::faas/odl-faas-user.adoc[]
+
 include::groupbasedpolicy/odl-groupbasedpolicy-user-guide.adoc[]
 
 include::l2switch/l2switch-user.adoc[]
