--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -80,6 +80,8 @@ include::ttp/ttp-cli-tools-user.adoc[TTP]
 
 include::usc/odl-usc-channel-user.adoc[USC]
 
+include::usecplugin/odl-usecplugin-user.adoc[Controller Shield]
+
 include::vtn/vtn-user.adoc[]
 
 include::controller/netconf/odl-netconf-user.adoc[]
