--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -58,6 +58,8 @@ include::nic/nic-user.adoc[NIC]
 
 include::sdninterfaceapp/odl-sdninterfaceapp-all-user.adoc[ODL-SDNi]
 
+include::openflowplugin/odl-ofp-user-guide.adoc[OpenFlow Plugin]
+
 include::opflex/agent-ovs-user.adoc[]
 
 include::bgpcep/odl-bgpcep-pcep-all-user.adoc[PCEP]
